--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:inputType="text"
-            android:hint="Title" />
+            android:hint="@string/title_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -78,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences|textMultiLine"
-            android:hint="Description" />
+            android:hint="@string/details_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -108,7 +108,8 @@
                 android:layout_marginTop="8dp"
                 android:src="@drawable/ic_due_date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/date_picker_title" />
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -120,7 +121,8 @@
                 android:src="@drawable/ic_due_time"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView2"
+                android:contentDescription="@string/time_picker_title" />
 
             <Button
                 android:id="@+id/date_button"
