--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_task"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -23,7 +22,9 @@
         android:id="@+id/task_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="18dp"
+        android:layout_marginBottom="4dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toTopOf="@id/deadline_seperator"
@@ -34,7 +35,7 @@
         android:id="@+id/deadline_seperator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="37dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toTopOf="@+id/task_time"
@@ -46,11 +47,13 @@
         android:id="@+id/task_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="4dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/deadline_seperator"
-        tools:layout_editor_absoluteY="42dp" />
+        app:layout_constraintTop_toBottomOf="@id/deadline_seperator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
