--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="37dp"
         android:textAlignment="center"
+        android:text="at"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toTopOf="@+id/task_time"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="18dp"
         android:layout_marginBottom="4dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
